--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Run pytest
         id: pytest
         run: |
-          docker compose run --rm web_server_tests bash -c "
+          docker compose run --rm web_server_tests bash -o pipefail -c "
             pytest -v --cov \
               --cov-report=json:$REPORTS_DIR/pytest-report.json \
               --cov-report=term | tee $REPORTS_DIR/pytest-output.txt"
@@ -75,6 +75,7 @@ jobs:
            namedLogo: pytest
 
       - name: Generate .md reports
+        if: success() || failure()
         run: |
           awk 'NR == 1 {next}; /^-+ coverage:/ {exit}; {print}' $REPORTS_DIR/pytest-output.txt \
             > $REPORTS_DIR/pytest-report.txt
@@ -94,6 +95,7 @@ jobs:
           done
 
       - name: Publish Job Summary
+        if: success() || failure()
         run: |
           cat $REPORTS_DIR/{coverage,pytest}-report.md \
             > $GITHUB_STEP_SUMMARY 2>/dev/null || true
