--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.9"
 
 services:
 
-  test_db:
-    image: postgres:13
-    env_file:
-      - vars.env
-    ports:
-      - "5432:5432"
+#  test_db:
+#    image: postgres:13
+#    env_file:
+#      - vars.env
+#    ports:
+#x      - "5432:5432"
 
   web_server_tests:
     image: albs-web-server-tests:latest
