--- a/nginx_configs/albs.conf
+++ b/nginx_configs/albs.conf
@@ -10,9 +10,9 @@ upstream pulp {
     server pulp:80;
 }
 
-upstream signfile {
-    server sign_file:8000;
-}
+#upstream signfile {
+#    server sign_file:8000;
+#}
 
 map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -69,8 +69,8 @@ server {
         proxy_pass http://pulp;
     }
 
-    location /sign-file/ {
-        proxy_set_header Host $http_host;
-        proxy_pass http://signfile/;
-    }
+ #   location /sign-file/ {
+ #       proxy_set_header Host $http_host;
+ #       proxy_pass http://signfile/;
+ #   }
 }
