Fix nginx service dependencies
Default nginx config (nginx_configs/albs.conf) requires sign_file
service to be started.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -501,6 +501,7 @@ services:
     depends_on:
       - web_server
       - frontend
+      - sign_file
     logging:
       driver: "json-file"
       options:
