--- a/reference_data/centos7.yml
+++ b/reference_data/centos7.yml
@@ -20,7 +20,7 @@
       vendor: AlmaLinux
     mock:
       chroot_setup_cmd: install bash bzip2 coreutils centos-release 
-        findutils gawk grep gzip info redhat-rpm-config 
+        findutils gawk grep gzip info redhat-rpm-config rpm-build 
         sed shadow-utils tar unzip util-linux-ng which xz yum git
       dnf_common_opts:
         - --setopt=deltarpm=False
