--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -531,6 +531,20 @@
       debug: false
       priority: 11
     - name: c10s-build
+      arch: x86_64_v2
+      type: rpm
+      url: https://kojihub.stream.centos.org/kojifiles/repos/c10s-build/latest/x86_64/
+      production: true
+      debug: false
+      priority: 11
+    - name: c10s-build
+      arch: x86_64_fp
+      type: rpm
+      url: https://kojihub.stream.centos.org/kojifiles/repos/c10s-build/latest/x86_64/
+      production: true
+      debug: false
+      priority: 11
+    - name: c10s-build
       arch: aarch64
       type: rpm
       url: https://kojihub.stream.centos.org/kojifiles/repos/c10s-build/latest/aarch64/
@@ -548,13 +562,6 @@
       arch: s390x
       type: rpm
       url: https://kojihub.stream.centos.org/kojifiles/repos/c10s-build/latest/s390x/
-      production: true
-      debug: false
-      priority: 11
-    - name: c10s-build
-      arch: i686
-      type: rpm
-      url: https://kojihub.stream.centos.org/kojifiles/repos/c10s-build/latest/i386/
       production: true
       debug: false
       priority: 11
@@ -645,3 +652,102 @@
       production: true
       debug: false
       priority: 11
+
+- name: AlmaLinux-10-beta
+  data:
+     mock:
+       secure_boot_macros:
+         "%pe_signing_cert": "'f4217b7b99a69128'"
+         "%pe_signing_token": "'AlmaLinux OS Foundation'"
+  repositories:
+    - name: almalinux-10-beta
+      arch: x86_64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-x86_64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: almalinux-10-beta
+      arch: x86_64_v2
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-x86_64_v2-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: almalinux-10-beta
+      arch: x86_64_fp
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-x86_64_fp-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: almalinux-10-beta
+      arch: aarch64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-aarch64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: almalinux-10-beta
+      arch: ppc64le
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-ppc64le-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: almalinux-10-beta
+      arch: s390x
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-s390x-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: almalinux-10-beta-debuginfo
+      arch: x86_64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-x86_64-debug-dr/
+      production: false
+      debug: true
+      priority: 10
+    - name: almalinux-10-beta-debuginfo
+      arch: x86_64_v2
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-x86_64_v2-debug-dr/
+      production: false
+      debug: true
+      priority: 10
+    - name: almalinux-10-beta-debuginfo
+      arch: x86_64_fp
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-x86_64_fp-debug-dr/
+      production: false
+      debug: true
+      priority: 10
+    - name: almalinux-10-beta-debuginfo
+      arch: aarch64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-aarch64-debug-dr/
+      production: false
+      debug: true
+      priority: 10
+    - name: almalinux-10-beta-debuginfo
+      arch: ppc64le
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-ppc64le-debug-dr/
+      production: false
+      debug: true
+      priority: 10
+    - name: almalinux-10-beta-debuginfo
+      arch: s390x
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-s390x-debug-dr/
+      production: false
+      debug: true
+      priority: 10
+    - name: almalinux-10-beta
+      arch: src
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/builds/almalinux10-beta-AlmaLinux-10-src-dr/
+      production: false
+      debug: false
+      priority: 10
