--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -441,9 +441,7 @@ services:
         max-file: "3"
 
   pulp:
-    # image: pulp/pulp
-    # after downgrading pulp you probably should to remove pulp volumes
-    image: pulp/pulp:upgrade
+    image: pulp/pulp:3.49.1
     ports:
       - 8081:80
       - 5431:5432
