--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -5094,3 +5094,10 @@
       production: false
       debug: false
       priority: 10
+    - name: almalinux-10-libsolv
+      arch: x86_64_v2
+      type: rpm
+      remote_url: https://build.almalinux.org/pulp/content/builds/AlmaLinux-10-x86_64_v2-15762-br/
+      production: false
+      debug: false
+      priority: 10
