--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -417,6 +417,44 @@
       debug: false
       priority: 10
 
+- name: java-portable-al10
+  repositories:
+    - name: java-portable-al10
+      arch: x86_64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-java-portable-al10-almalinux-9-x86_64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: java-portable-al10
+      arch: x86_64_v2
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-java-portable-al10-almalinux-9-x86_64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: java-portable-al10
+      arch: aarch64
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-java-portable-al10-almalinux-9-aarch64-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: java-portable-al10
+      arch: ppc64le
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-java-portable-al10-almalinux-9-ppc64le-dr/
+      production: false
+      debug: false
+      priority: 10
+    - name: java-portable-al10
+      arch: s390x
+      type: rpm
+      url: https://build.almalinux.org/pulp/content/copr/eabdullin1-java-portable-al10-almalinux-9-s390x-dr/
+      production: false
+      debug: false
+      priority: 10
+
 - name: Synergy
   repositories:
     - name: almalinux-synergy
