--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -379,6 +379,75 @@
       debug: false
       production: false
 
+- name: "copr:build.almalinux.org:soksanichenko:Pungi10"
+  repositories:
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:x86_64"
+      arch: x86_64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-x86_64-dr/"
+      debug: false
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:x86_64-debug"
+      arch: x86_64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-x86_64-debug-dr/"
+      debug: true
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:x86_64_v2"
+      arch: x86_64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-x86_64_v2-dr/"
+      debug: false
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:x86_64_v2-debug"
+      arch: x86_64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-x86_64_v2-debug-dr/"
+      debug: true
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:aarch64"
+      arch: aarch64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-aarch64-dr/"
+      debug: false
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:aarch64-debug"
+      arch: aarch64
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-aarch64-debug-dr/"
+      debug: true
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:ppc64le"
+      arch: ppc64le
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-ppc64le-dr/"
+      debug: false
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:ppc64le-debug"
+      arch: ppc64le
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-ppc64le-debug-dr/"
+      debug: true
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:s390x"
+      arch: s390x
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-s390x-dr/"
+      debug: false
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:s390x-debug"
+      arch: s390x
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-s390x-debug-dr/"
+      debug: true
+      production: false
+    - name: "copr:build.almalinux.org:soksanichenko:Pungi10:src"
+      arch: src
+      type: rpm
+      url: "https://build.almalinux.org/pulp/content/copr/soksanichenko-Pungi10-almalinux-$releasever-src-dr/"
+      debug: false
+      production: false
+
 - name: java-portable
   repositories:
     - name: java-portable
