--- a/tests/test-vars.env
+++ b/tests/test-vars.env
@@ -20,3 +20,6 @@ SQLALCHEMY_POOL_PRE_PING=True
 SQLALCHEMY_POOL_RECYCLE=3600
 SQLALCHEMY_URL="postgresql+psycopg2://postgres:password@test_db/test-almalinux-bs"
 SYNC_DATABASE_URL="postgresql+psycopg2://postgres:password@test_db/test-almalinux-bs"
+SIGN_SERVER_USERNAME="test@test.ru"
+SIGN_SERVER_PASSWORD="test"
+TEST_SIGN_KEY_ID=""
