Add EPEL-10 for x86_64, aarch64, ppc64le, s390x

--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -232,6 +232,37 @@
       debug: false
       priority: 10
 
+- name: EPEL-10
+  repositories:
+    - name: epel
+      arch: x86_64
+      type: rpm
+      url: https://dl.fedoraproject.org/pub/epel/$releasever/Everything/x86_64/os/
+      production: false
+      debug: false
+      priority: 10
+    - name: epel
+      arch: aarch64
+      type: rpm
+      url: https://dl.fedoraproject.org/pub/epel/$releasever/Everything/aarch64/os/
+      production: false
+      debug: false
+      priority: 10
+    - name: epel
+      arch: ppc64le
+      type: rpm
+      url: https://dl.fedoraproject.org/pub/epel/$releasever/Everything/ppc64le/os/
+      production: false
+      debug: false
+      priority: 10
+    - name: epel
+      arch: s390x
+      type: rpm
+      url: https://dl.fedoraproject.org/pub/epel/$releasever/Everything/s390x/os/
+      production: false
+      debug: false
+      priority: 10
+
 - name: dotnet-build
   data:
     mock:
