--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -5266,48 +5266,39 @@
       repository_sync_policy: additive
       priority: 10
       mock_enabled: false
-    - name: almalinux-10-beta
-      arch: x86_64
-      type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/copr/eabdullin1-almalinux10-beta-almalinux-10-x86_64-dr/
-      production: false
-      debug: false
-      priority: 10
-    - name: almalinux-10-beta
-      arch: x86_64_v2
-      type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/copr/eabdullin1-almalinux10-beta-almalinux-10-x86_64_v2-dr/
-      production: false
-      debug: false
-      priority: 10
-    - name: almalinux-10-beta
+    - name: almalinux-10-raspberrypi
       arch: aarch64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/copr/eabdullin1-almalinux10-beta-almalinux-10-aarch64-dr/
-      production: false
+      remote_url: http://repo.almalinux.org/almalinux/10/raspberrypi/aarch64/os/
+      export_path: almalinux/10/raspberrypi/aarch64/os/
+      production: true
       debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
       priority: 10
-    - name: almalinux-10-beta
-      arch: ppc64le
+      mock_enabled: false
+    - name: almalinux-10-raspberrypi
+      arch: src
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/copr/eabdullin1-almalinux10-beta-almalinux-10-ppc64le-dr/
-      production: false
+      remote_url: http://repo.almalinux.org/vault/10/raspberrypi/Source/
+      export_path: vault/10/raspberrypi/Source/
+      production: true
       debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
       priority: 10
-    - name: almalinux-10-beta
-      arch: s390x
+      mock_enabled: false
+    - name: almalinux-10-raspberrypi-debuginfo
+      arch: aarch64
       type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/copr/eabdullin1-almalinux10-beta-almalinux-10-s390x-dr/
-      production: false
-      debug: false
+      remote_url: http://repo.almalinux.org/vault/10/raspberrypi/debug/aarch64/
+      export_path: vault/10/raspberrypi/debug/aarch64/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
       priority: 10
-    - name: almalinux-10-beta-riscv64
-      arch: riscv64
-      type: rpm
-      remote_url: https://build.almalinux.org/pulp/content/copr/eabdullin1-almalinux10-beta-riscv64-almalinux-10-riscv64-dr/
-      production: false
-      debug: false
-      priority: 10
+      mock_enabled: false
 
 - name: AlmaLinux-Kitten-10
   distr_type: rhel
@@ -6689,6 +6680,39 @@
       type: rpm
       remote_url: http://kitten.repo.almalinux.org/vault/10-kitten/SAPHANA/debug/riscv64/
       export_path: vault/10-kitten/SAPHANA/debug/riscv64/
+      production: true
+      debug: true
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
+      mock_enabled: false
+    - name: almalinux-kitten-10-raspberrypi
+      arch: aarch64
+      type: rpm
+      remote_url: http://repo.almalinux.org/almalinux-kitten/10-kitten/raspberrypi/aarch64/os/
+      export_path: almalinux-kitten/10-kitten/raspberrypi/aarch64/os/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
+      mock_enabled: false
+    - name: almalinux-kitten-10-raspberrypi
+      arch: src
+      type: rpm
+      remote_url: http://repo.almalinux.org/vault/10-kitten/raspberrypi/Source/
+      export_path: vault/10-kitten/raspberrypi/Source/
+      production: true
+      debug: false
+      remote_sync_policy: on_demand
+      repository_sync_policy: additive
+      priority: 10
+      mock_enabled: false
+    - name: almalinux-kitten-10-raspberrypi-debuginfo
+      arch: aarch64
+      type: rpm
+      remote_url: http://repo.almalinux.org/vault/10-kitten/raspberrypi/debug/aarch64/
+      export_path: vault/10-kitten/raspberrypi/debug/aarch64/
       production: true
       debug: true
       remote_sync_policy: on_demand
