--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -10,8 +10,8 @@
   data:
      mock:
        secure_boot_macros:
-         "%pe_signing_cert": "f4217b7b99a69128"
-         "%pe_signing_token": "AlmaLinux OS Foundation"
+         "%pe_signing_cert": "'f4217b7b99a69128'"
+         "%pe_signing_token": "'AlmaLinux OS Foundation'"
   repositories:
     - name: almalinux-8-beta
       arch: i686
