--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -53,7 +53,7 @@ jobs:
         with:
           repository: AlmaLinux/oval-processor
           path: oval-processor
-          ssh-key: ${{ secrets.OVAL_PROCESSOR_PRIVKEY }}
+          token: ${{ secrets.GIST_TOKEN }}
 
       - name: Set up Docker Buildx
         # https://github.com/marketplace/actions/docker-setup-buildx
