Use definition instead of mock_dist

--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -930,7 +930,8 @@
 
 - name: EPEL-Kitten-10_altarch
   data:
-    mock_dist: el10.alma_altarch
+    definitions:
+      dist: ".el10.alma_altarch"
   repositories:
     - name: EPEL_Kitten_altarch
       arch: x86_64_v2
@@ -949,7 +950,8 @@
 
 - name: EPEL-10_altarch
   data:
-    mock_dist: el10_0.alma_altarch
+    definitions:
+      dist: ".el10_0.alma_altarch"
   repositories:
     - name: EPEL_altarch
       arch: x86_64_v2
