Add epel-rpm-macros to epel flavor

--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -929,6 +929,11 @@
       priority: 9
 
 - name: EPEL-Kitten-10_altarch
+  data:
+    mock:
+      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
+        make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core epel-rpm-macros
   repositories:
     - name: EPEL_Kitten_altarch
       arch: x86_64_v2
