Add flavor to disable host_resolv

--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -976,3 +976,9 @@
       production: false
       debug: false
       priority: 10
+
+- name: disable_host_resolv
+  data:
+    mock:
+      use_host_resolv: false
+  repositories:
