Update chroot for epel builds

--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -958,6 +958,11 @@
       priority: 10
 
 - name: EPEL-10_altarch
+  data:
+    mock:
+      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
+        make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core epel-rpm-macros
   repositories:
     - name: EPEL_altarch
       arch: x86_64_v2
