--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -936,11 +936,6 @@
       priority: 9
 
 - name: EPEL-Kitten-10_altarch
-  data:
-    mock:
-      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
-        make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core epel-rpm-macros
   repositories:
     - name: EPEL_Kitten_altarch
       arch: x86_64_v2
@@ -958,11 +953,6 @@
       priority: 10
 
 - name: EPEL-10_altarch
-  data:
-    mock:
-      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
-        make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
-        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core epel-rpm-macros
   repositories:
     - name: EPEL_altarch
       arch: x86_64_v2
@@ -1011,3 +1001,10 @@
       chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
         make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
         info patch util-linux findutils grep zlib git-core
+
+- name: add-epel-rpm-macros
+  data:
+    mock:
+      chroot_setup_cmd: install tar gcc-c++ redhat-rpm-config almalinux-release which xz sed
+        make bzip2 gzip gcc coreutils unzip shadow-utils diffutils cpio bash gawk rpm-build
+        info patch util-linux findutils grep zlib scl-utils scl-utils-build git-core epel-rpm-macros
