Move platform versions from modularity to data field
Resolves: https://github.com/AlmaLinux/build-system/issues/475

--- a/reference_data/centos_stream.yml
+++ b/reference_data/centos_stream.yml
@@ -4,9 +4,9 @@
   distr_version: '8'
   priority: 2
   test_dist_name: CentOSStream8
-  modularity:
+  modularity: {}
+  data:
       versions:
-  data: {}
   is_reference: true
   type: rpm
   arch_list:
@@ -19,9 +19,9 @@
   distr_version: '9'
   priority: 2
   test_dist_name: CentOSStream9
-  modularity:
+  modularity: {}
+  data:
       versions:
-  data: {}
   is_reference: true
   type: rpm
   arch_list:
@@ -35,9 +35,9 @@
   distr_version: '10'
   priority: 2
   test_dist_name: CentOSStream10
-  modularity:
+  modularity: {}
+  data:
       versions:
-  data: {}
   is_reference: true
   type: rpm
   arch_list:
