--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -914,8 +914,8 @@
     mock:
       dnf_common_opts:
         - --nobest
-        - --exclude fedora*
-        - --exclude perl*5.38*
+        - --exclude=fedora*
+        - --exclude=perl*5.38*
   repositories:
     - name: fedora-40-riscv64
       arch: riscv64
